Add completion support for path segment and function arg contexts